Fix the !ENABLE(WEB_TIMING) build https://bugs.webkit.org/show_bug.cgi?id=168113

Reviewed by Alex Christensen.

* workers/WorkerGlobalScope.cpp:
(WebCore::WorkerGlobalScope::WorkerGlobalScope):


Canonical link: https://commits.webkit.org/185201@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212161 268f45cc-cd09-0410-ab3c-d52691b4dbfc